# Tesla-PVPC

./: .coverage  .env.example  .gitignore  CASUISTICAS.md  README.es.md  README.md  config.example.json  pyproject.toml  run.bat  run.sh  tesla_pvpc.py
auto_charge/: __init__.py  config.py  daemon.py  debug_tessie.py  esios.py  i18n.py  interactive.py  planner.py  prices.py  status.py  telegram_bot.py  tessie.py  utils.py
install/: com.tesla-pvpc.plist  tesla-pvpc.service  windows-instructions.txt
tests/: test_cli.py  test_cli_full.py  test_config_mock.py  test_coverage_gaps.py  test_daemon.py  test_daemon_full.py  test_daemon_mock.py  test_errors.py  test_integration.py  test_planner.py  test_prices_mock.py  test_telegram_mock.py  test_tessie_mock.py
